// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Landing page  should render the coming soon landing page  1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="container scaleto100 mx-auto min-h-(65vh)"
      >
        <nav
          class="paynav"
        >
          <a
            class="paylogo"
            href="/"
          >
            <img
              alt="paymaster logo"
              data-nimg="1"
              decoding="async"
              height="50"
              src="/_next/image?url=%2Fassets%2Fpm-images%2Flogo.png&w=256&q=75"
              srcset="/_next/image?url=%2Fassets%2Fpm-images%2Flogo.png&w=128&q=75 1x, /_next/image?url=%2Fassets%2Fpm-images%2Flogo.png&w=256&q=75 2x"
              style="color: transparent;"
              width="120"
            />
          </a>
          <ul
            class="list-ul"
          >
            <li
              data-testid="list-items"
            >
              <a
                class="mx-1 py-1"
                href="#"
              >
                Docs
              </a>
            </li>
            <li
              data-testid="list-items"
            >
              <button
                class="px-1 m-0 py-1 lg:w-40 hover:bg-purple-600 border-solid border-2 border-slate-400 rounded-md"
              >
                Coming Soon
              </button>
            </li>
          </ul>
        </nav>
        <section
          class="first_section"
        >
          <div
            class="heading_section"
          >
            <h1>
              The only paymaster's access infrastructure you will need
            </h1>
            <p
              class="text-slate-400 my-6"
            >
              Using paymaster to simplify zk transactions and provide
              <br />
               superior ux to dapps
            </p>
            <button
              class="px-3 py-1 "
            >
              Coming soon
            </button>
          </div>
          <div
            class="heading_image"
          >
            <img
              alt="paymaster-planet-logo"
              data-nimg="1"
              data-testid="planet_img"
              decoding="async"
              height="322"
              src="/_next/image?url=%2Fassets%2Fpm-images%2Fheader_image.png&w=1080&q=75"
              srcset="/_next/image?url=%2Fassets%2Fpm-images%2Fheader_image.png&w=640&q=75 1x, /_next/image?url=%2Fassets%2Fpm-images%2Fheader_image.png&w=1080&q=75 2x"
              style="color: transparent;"
              width="452"
            />
          </div>
          <div
            class="planet_blur"
          />
        </section>
        <section
          class="second_section"
        >
          <div
            class="chain_section"
          >
            <h2>
              On-Chain Rewards Middleware
            </h2>
            <p
              class="text-slate-400 my-6"
            >
              Loyalty programs are a way we know to give back to our most loyal users and with account abstraction, it is possible to create a standalone incentive system. your users can earn a fraction of their transaction value each time they make a transaction. However building this system distinctively may incur additional miscellaneous. With paymasters, you can integrate chargebacks as a middleware.
            </p>
          </div>
          <div
            class="chain_image"
          >
            <img
              alt="paymaster onchain image"
              data-nimg="1"
              data-testid="chain_img"
              decoding="async"
              height="400"
              object-fit="cover"
              src="/_next/image?url=%2Fassets%2Fpm-images%2Fchain_section4.png&w=1080&q=75"
              srcset="/_next/image?url=%2Fassets%2Fpm-images%2Fchain_section4.png&w=640&q=75 1x, /_next/image?url=%2Fassets%2Fpm-images%2Fchain_section4.png&w=1080&q=75 2x"
              style="color: transparent;"
              width="500"
            />
          </div>
          <div
            class="img_blur"
          />
        </section>
        <section
          class="third_section"
        >
          <div
            class="third_section_first_content"
          >
            <span>
              <img
                alt="paymasters icon"
                class="mb-2"
                data-nimg="1"
                decoding="async"
                height="30"
                object-fit="cover"
                src="/assets/pm-icons/component_exchange.svg"
                style="color: transparent;"
                width="35"
              />
            </span>
            <h5
              class="font-bold text-2xl"
            >
              Much More Than 
              <br />
              Transactions
            </h5>
            <p
              class="text-slate-400 text-sm my-6"
            >
              An aggregation of paymasters for users to have access to Ethereum protocols without incurring gas costs or unnecessary onboarding cost.
            </p>
          </div>
          <div
            class="third_section_second_content"
          >
            <span>
              <img
                alt="paymasters search icon"
                class="mb-2"
                data-nimg="1"
                decoding="async"
                height="30"
                object-fit="cover"
                src="/assets/pm-icons/search.svg"
                style="color: transparent;"
                width="32"
              />
            </span>
            <h5
              class="font-bold text-2xl"
            >
              More Visible Than Macro
            </h5>
            <p
              class="text-slate-400 my-6"
            >
              More visible than macro Explore a wide range of Paymasters, find protocols with Paymaster support . Get more value when using dapps.
            </p>
          </div>
          <div
            class="third_section_third_content"
          >
            <span>
              <img
                alt="paymasters icon"
                data-nimg="1"
                decoding="async"
                height="30"
                object-fit="cover"
                src="/assets/pm-icons/ads_click.svg"
                style="color: transparent;"
                width="32"
              />
            </span>
            <h5
              class="font-bold text-2xl"
            >
              Ux More Superior Than 
              <br />
               Superior
            </h5>
            <p
              class="text-slate-400 my-6"
            >
              Create custom paymasters that does what you want or targets a group or community without complexity. Craft innovative transaction flows for your users.
            </p>
          </div>
          <div
            class="third_section_img"
          >
            <img
              alt="paymaster flower image"
              data-nimg="1"
              data-testid="flower-img"
              decoding="async"
              height="600"
              object-fit="cover"
              src="/_next/image?url=%2Fassets%2Fpm-images%2Fflower_img.png&w=1080&q=75"
              srcset="/_next/image?url=%2Fassets%2Fpm-images%2Fflower_img.png&w=640&q=75 1x, /_next/image?url=%2Fassets%2Fpm-images%2Fflower_img.png&w=1080&q=75 2x"
              style="color: transparent;"
              width="450"
            />
          </div>
          <div
            class="flower_image_blur"
          />
          <div
            class="overlap_flower"
          >
            <div
              class="code_snapshot"
            >
              <img
                alt="paymaster code snapshot"
                data-nimg="1"
                decoding="async"
                height="600"
                object-fit="cover"
                src="/_next/image?url=%2Fassets%2Fpm-images%2Fcode_img.png&w=1200&q=75"
                srcset="/_next/image?url=%2Fassets%2Fpm-images%2Fcode_img.png&w=640&q=75 1x, /_next/image?url=%2Fassets%2Fpm-images%2Fcode_img.png&w=1200&q=75 2x"
                style="color: transparent;"
                width="550"
              />
            </div>
            <div
              class="build_paymaster"
            >
              <h2>
                Build Paymasters
              </h2>
              <p
                class="text-slate-400 my-6"
              >
                Integrate our typescript SDK to form paymasters compatible zk transaction objects in your dapps. Explore SDK
              </p>
              <button
                class="px-3 py-2 w-40 hover:bg-purple-900 bg-purple-600 rounded-md"
              >
                Explore SDK
              </button>
            </div>
            <div
              class="build_blur"
            />
          </div>
        </section>
        <div
          class="js_client_section"
        >
          <div
            class="clients_content"
          >
            <div
              class="px-5"
            >
              <h5
                class=""
              >
                JS Client Library
              </h5>
              <p
                class="text-slate-400 text-sm flex justify-start"
              >
                Lorem ipsum dolor sit amet consectetur. Sit lectus ac et turpis eu ultricies odio praesent in.
              </p>
              <p
                class="flex justify-start text-jsClientGlow align-middle content-center p-2"
              >
                <span>
                  <img
                    alt="paymaster JS docs"
                    class="mr-2"
                    data-nimg="1"
                    decoding="async"
                    height="20"
                    object-fit="cover"
                    src="/_next/image?url=%2Fassets%2Fpm-icons%2Fnpm.png&w=96&q=75"
                    srcset="/_next/image?url=%2Fassets%2Fpm-icons%2Fnpm.png&w=48&q=75 1x, /_next/image?url=%2Fassets%2Fpm-icons%2Fnpm.png&w=96&q=75 2x"
                    style="color: transparent;"
                    width="48"
                  />
                </span>
                Js docs
              </p>
            </div>
            <div
              class="px-5"
            >
              <h5
                class="text-center"
              >
                HTTP API
              </h5>
              <p
                class="text-slate-400 text-sm"
              >
                Lorem ipsum dolor sit amet consectetur. Sit lectus ac et turpis eu ultricies odio praesent in.
              </p>
              <p
                class="flex justify-start text-jsClientGlow align-middle content-center p-2"
              >
                <span>
                  <img
                    alt="paymaster http API"
                    class="mr-2"
                    data-nimg="1"
                    decoding="async"
                    height="20"
                    object-fit="cover"
                    src="/_next/image?url=%2Fassets%2Fpm-icons%2Fcode-braces.png&w=96&q=75"
                    srcset="/_next/image?url=%2Fassets%2Fpm-icons%2Fcode-braces.png&w=48&q=75 1x, /_next/image?url=%2Fassets%2Fpm-icons%2Fcode-braces.png&w=96&q=75 2x"
                    style="color: transparent;"
                    width="48"
                  />
                </span>
                HTTP Docs
              </p>
            </div>
            <div
              class="px-5"
            >
              <h5
                class="text-center"
              >
                Web App
              </h5>
              <p
                class="text-slate-400 text-sm mb-1"
              >
                Lorem ipsum dolor sit amet consectetur. Sit lectus ac et turpis eu ultricies odio praesent in.
              </p>
              <p
                class="flex justify-start text-jsClientGlow align-middle content-center p-2"
              >
                <span>
                  <img
                    alt="paymaster Web app"
                    class="mr-2"
                    data-nimg="1"
                    decoding="async"
                    height="20"
                    object-fit="cover"
                    src="/_next/image?url=%2Fassets%2Fpm-icons%2Fcopy.png&w=96&q=75"
                    srcset="/_next/image?url=%2Fassets%2Fpm-icons%2Fcopy.png&w=48&q=75 1x, /_next/image?url=%2Fassets%2Fpm-icons%2Fcopy.png&w=96&q=75 2x"
                    style="color: transparent;"
                    width="40"
                  />
                </span>
                Make Your First Upload
              </p>
            </div>
          </div>
          <div
            class="prog_langs px-5"
          >
            <h5
              class="pl-1"
            >
              Supported Languages
            </h5>
            <div
              class="sub_prog_langs w-full mt-3"
            >
              <div>
                <a
                  class="p-2 bg-jsClientDark rounded-md w-36 mx-3"
                >
                   Nodejs
                </a>
              </div>
              <div>
                <a
                  class="p-2 bg-jsClientDark rounded-md w-36 mx-3"
                >
                  Solidity
                </a>
              </div>
              <div>
                <a
                  class="p-2 bg-jsClientDark rounded-md w-38 h-10 mx-3"
                >
                   
                  Javascript
                </a>
              </div>
              <div>
                <a
                  class="p-2 bg-jsClientDark rounded-md w-38 h-10 mx-3"
                >
                   
                  Typescript
                </a>
              </div>
              <div>
                <a
                  class="p-2 bg-jsClientDark rounded-md w-38 h-10 mx-3"
                >
                   
                  Cairo
                </a>
              </div>
            </div>
          </div>
        </div>
        <section
          class="fourth_section"
        >
          <h4
            class="text-center"
          >
            Our Partners
          </h4>
          <div
            class="partners_logos"
          >
            <span
              class="zksynk"
            >
              <img
                alt="zkSynk image"
                data-nimg="1"
                decoding="async"
                height="50"
                object-fit="cover"
                src="/_next/image?url=%2Fassets%2Fpm-logos%2FzkSynk.png&w=128&q=75"
                srcset="/_next/image?url=%2Fassets%2Fpm-logos%2FzkSynk.png&w=64&q=75 1x, /_next/image?url=%2Fassets%2Fpm-logos%2FzkSynk.png&w=128&q=75 2x"
                style="color: transparent;"
                width="60"
              />
            </span>
            <span
              class="starknet"
            >
              <img
                alt="StarkNet image"
                data-nimg="1"
                decoding="async"
                height="50"
                object-fit="cover"
                src="/_next/image?url=%2Fassets%2Fpm-logos%2FStarkNet.png&w=128&q=75"
                srcset="/_next/image?url=%2Fassets%2Fpm-logos%2FStarkNet.png&w=64&q=75 1x, /_next/image?url=%2Fassets%2Fpm-logos%2FStarkNet.png&w=128&q=75 2x"
                style="color: transparent;"
                width="60"
              />
            </span>
            <span
              class="bravos"
            >
              <img
                alt="Bravos image"
                data-nimg="1"
                decoding="async"
                height="50"
                object-fit="cover"
                src="/_next/image?url=%2Fassets%2Fpm-logos%2FBraavos.png&w=128&q=75"
                srcset="/_next/image?url=%2Fassets%2Fpm-logos%2FBraavos.png&w=64&q=75 1x, /_next/image?url=%2Fassets%2Fpm-logos%2FBraavos.png&w=128&q=75 2x"
                style="color: transparent;"
                width="60"
              />
            </span>
            <span
              class="argent"
            >
              <img
                alt="Argent image"
                data-nimg="1"
                decoding="async"
                height="50"
                object-fit="cover"
                src="/_next/image?url=%2Fassets%2Fpm-logos%2FArgent.png&w=128&q=75"
                srcset="/_next/image?url=%2Fassets%2Fpm-logos%2FArgent.png&w=64&q=75 1x, /_next/image?url=%2Fassets%2Fpm-logos%2FArgent.png&w=128&q=75 2x"
                style="color: transparent;"
                width="60"
              />
            </span>
            <span
              class="chainlink"
            >
              <img
                alt="ChainLink image"
                data-nimg="1"
                decoding="async"
                height="50"
                object-fit="cover"
                src="/_next/image?url=%2Fassets%2Fpm-logos%2FChainLink.png&w=128&q=75"
                srcset="/_next/image?url=%2Fassets%2Fpm-logos%2FChainLink.png&w=64&q=75 1x, /_next/image?url=%2Fassets%2Fpm-logos%2FChainLink.png&w=128&q=75 2x"
                style="color: transparent;"
                width="60"
              />
            </span>
            <span
              class="outlier"
            >
              <img
                alt="Outlier image"
                data-nimg="1"
                decoding="async"
                height="50"
                object-fit="cover"
                src="/_next/image?url=%2Fassets%2Fpm-logos%2FOutlier.png&w=128&q=75"
                srcset="/_next/image?url=%2Fassets%2Fpm-logos%2FOutlier.png&w=64&q=75 1x, /_next/image?url=%2Fassets%2Fpm-logos%2FOutlier.png&w=128&q=75 2x"
                style="color: transparent;"
                width="60"
              />
            </span>
            <span
              class="dao"
            >
              <img
                alt="developer_dao image"
                data-nimg="1"
                decoding="async"
                height="50"
                object-fit="cover"
                src="/_next/image?url=%2Fassets%2Fpm-logos%2Fdeveloper_dao.png&w=128&q=75"
                srcset="/_next/image?url=%2Fassets%2Fpm-logos%2Fdeveloper_dao.png&w=64&q=75 1x, /_next/image?url=%2Fassets%2Fpm-logos%2Fdeveloper_dao.png&w=128&q=75 2x"
                style="color: transparent;"
                width="60"
              />
            </span>
          </div>
        </section>
        <section
          class="fifth_section"
        >
          <div
            class="get_started"
          >
            <h5>
              Get Started, Explore And Create Paymasters
            </h5>
            <button
              class="px-3 py-1 mt-6 rounded-md"
            >
              Launch App
            </button>
          </div>
          <div
            class="get_started_image"
          >
            <img
              alt="paymaster getstarted image"
              data-nimg="1"
              decoding="async"
              height="300"
              object-fit="cover"
              src="/_next/image?url=%2Fassets%2Fpm-images%2FFrame55.png&w=2048&q=75"
              srcset="/_next/image?url=%2Fassets%2Fpm-images%2FFrame55.png&w=1080&q=75 1x, /_next/image?url=%2Fassets%2Fpm-images%2FFrame55.png&w=2048&q=75 2x"
              style="color: transparent;"
              width="974"
            />
          </div>
        </section>
        <section
          class="subscribe_section"
        >
          <div
            class="subscribe_logo"
          >
            <img
              alt="paymaster logo"
              data-nimg="1"
              decoding="async"
              height="30"
              src="/_next/image?url=%2Fassets%2Fpm-images%2Flogo.png&w=256&q=75"
              srcset="/_next/image?url=%2Fassets%2Fpm-images%2Flogo.png&w=128&q=75 1x, /_next/image?url=%2Fassets%2Fpm-images%2Flogo.png&w=256&q=75 2x"
              style="color: transparent;"
              width="120"
            />
          </div>
          <p
            class=" mb-1"
          />
          <form>
            <label
              for="subscribe"
            >
              Subscribe to our news letter
            </label>
            <br />
            <input
              class="pl-2"
              id="subscribe"
              name="subscribe"
              placeholder="Enter your email"
              type="email"
            />
            <button
              class="px-3 py-1 hover:bg-purple-900 bg-purple-600 m-2 rounded-md"
              name="subscribe"
            >
              Subscribe
            </button>
          </form>
        </section>
        <footer
          class="bottom pl-2"
        >
          <hr
            class=""
          />
          <p>
            © 2023 Paymasters. All rights reserved. 
          </p>
          <ul>
            <li
              data-testid="footer-list-item"
            >
              <a
                href="#"
              >
                Discord
              </a>
               
            </li>
            <li
              data-testid="footer-list-item"
            >
              <a
                href="#"
              >
                Telegram 
              </a>
            </li>
            <li
              data-testid="footer-list-item"
            >
              <a
                href="#"
              >
                Twitter 
              </a>
            </li>
            <li
              data-testid="footer-list-item"
            >
              <a
                href="#"
              >
                Github
              </a>
               
            </li>
            <li
              data-testid="footer-list-item"
            >
              <a
                href="#"
              >
                Contact
              </a>
               
            </li>
            <li
              data-testid="footer-list-item"
            >
              <a
                href="#"
              >
                Privacy
              </a>
               
            </li>
          </ul>
        </footer>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="container scaleto100 mx-auto min-h-(65vh)"
    >
      <nav
        class="paynav"
      >
        <a
          class="paylogo"
          href="/"
        >
          <img
            alt="paymaster logo"
            data-nimg="1"
            decoding="async"
            height="50"
            src="/_next/image?url=%2Fassets%2Fpm-images%2Flogo.png&w=256&q=75"
            srcset="/_next/image?url=%2Fassets%2Fpm-images%2Flogo.png&w=128&q=75 1x, /_next/image?url=%2Fassets%2Fpm-images%2Flogo.png&w=256&q=75 2x"
            style="color: transparent;"
            width="120"
          />
        </a>
        <ul
          class="list-ul"
        >
          <li
            data-testid="list-items"
          >
            <a
              class="mx-1 py-1"
              href="#"
            >
              Docs
            </a>
          </li>
          <li
            data-testid="list-items"
          >
            <button
              class="px-1 m-0 py-1 lg:w-40 hover:bg-purple-600 border-solid border-2 border-slate-400 rounded-md"
            >
              Coming Soon
            </button>
          </li>
        </ul>
      </nav>
      <section
        class="first_section"
      >
        <div
          class="heading_section"
        >
          <h1>
            The only paymaster's access infrastructure you will need
          </h1>
          <p
            class="text-slate-400 my-6"
          >
            Using paymaster to simplify zk transactions and provide
            <br />
             superior ux to dapps
          </p>
          <button
            class="px-3 py-1 "
          >
            Coming soon
          </button>
        </div>
        <div
          class="heading_image"
        >
          <img
            alt="paymaster-planet-logo"
            data-nimg="1"
            data-testid="planet_img"
            decoding="async"
            height="322"
            src="/_next/image?url=%2Fassets%2Fpm-images%2Fheader_image.png&w=1080&q=75"
            srcset="/_next/image?url=%2Fassets%2Fpm-images%2Fheader_image.png&w=640&q=75 1x, /_next/image?url=%2Fassets%2Fpm-images%2Fheader_image.png&w=1080&q=75 2x"
            style="color: transparent;"
            width="452"
          />
        </div>
        <div
          class="planet_blur"
        />
      </section>
      <section
        class="second_section"
      >
        <div
          class="chain_section"
        >
          <h2>
            On-Chain Rewards Middleware
          </h2>
          <p
            class="text-slate-400 my-6"
          >
            Loyalty programs are a way we know to give back to our most loyal users and with account abstraction, it is possible to create a standalone incentive system. your users can earn a fraction of their transaction value each time they make a transaction. However building this system distinctively may incur additional miscellaneous. With paymasters, you can integrate chargebacks as a middleware.
          </p>
        </div>
        <div
          class="chain_image"
        >
          <img
            alt="paymaster onchain image"
            data-nimg="1"
            data-testid="chain_img"
            decoding="async"
            height="400"
            object-fit="cover"
            src="/_next/image?url=%2Fassets%2Fpm-images%2Fchain_section4.png&w=1080&q=75"
            srcset="/_next/image?url=%2Fassets%2Fpm-images%2Fchain_section4.png&w=640&q=75 1x, /_next/image?url=%2Fassets%2Fpm-images%2Fchain_section4.png&w=1080&q=75 2x"
            style="color: transparent;"
            width="500"
          />
        </div>
        <div
          class="img_blur"
        />
      </section>
      <section
        class="third_section"
      >
        <div
          class="third_section_first_content"
        >
          <span>
            <img
              alt="paymasters icon"
              class="mb-2"
              data-nimg="1"
              decoding="async"
              height="30"
              object-fit="cover"
              src="/assets/pm-icons/component_exchange.svg"
              style="color: transparent;"
              width="35"
            />
          </span>
          <h5
            class="font-bold text-2xl"
          >
            Much More Than 
            <br />
            Transactions
          </h5>
          <p
            class="text-slate-400 text-sm my-6"
          >
            An aggregation of paymasters for users to have access to Ethereum protocols without incurring gas costs or unnecessary onboarding cost.
          </p>
        </div>
        <div
          class="third_section_second_content"
        >
          <span>
            <img
              alt="paymasters search icon"
              class="mb-2"
              data-nimg="1"
              decoding="async"
              height="30"
              object-fit="cover"
              src="/assets/pm-icons/search.svg"
              style="color: transparent;"
              width="32"
            />
          </span>
          <h5
            class="font-bold text-2xl"
          >
            More Visible Than Macro
          </h5>
          <p
            class="text-slate-400 my-6"
          >
            More visible than macro Explore a wide range of Paymasters, find protocols with Paymaster support . Get more value when using dapps.
          </p>
        </div>
        <div
          class="third_section_third_content"
        >
          <span>
            <img
              alt="paymasters icon"
              data-nimg="1"
              decoding="async"
              height="30"
              object-fit="cover"
              src="/assets/pm-icons/ads_click.svg"
              style="color: transparent;"
              width="32"
            />
          </span>
          <h5
            class="font-bold text-2xl"
          >
            Ux More Superior Than 
            <br />
             Superior
          </h5>
          <p
            class="text-slate-400 my-6"
          >
            Create custom paymasters that does what you want or targets a group or community without complexity. Craft innovative transaction flows for your users.
          </p>
        </div>
        <div
          class="third_section_img"
        >
          <img
            alt="paymaster flower image"
            data-nimg="1"
            data-testid="flower-img"
            decoding="async"
            height="600"
            object-fit="cover"
            src="/_next/image?url=%2Fassets%2Fpm-images%2Fflower_img.png&w=1080&q=75"
            srcset="/_next/image?url=%2Fassets%2Fpm-images%2Fflower_img.png&w=640&q=75 1x, /_next/image?url=%2Fassets%2Fpm-images%2Fflower_img.png&w=1080&q=75 2x"
            style="color: transparent;"
            width="450"
          />
        </div>
        <div
          class="flower_image_blur"
        />
        <div
          class="overlap_flower"
        >
          <div
            class="code_snapshot"
          >
            <img
              alt="paymaster code snapshot"
              data-nimg="1"
              decoding="async"
              height="600"
              object-fit="cover"
              src="/_next/image?url=%2Fassets%2Fpm-images%2Fcode_img.png&w=1200&q=75"
              srcset="/_next/image?url=%2Fassets%2Fpm-images%2Fcode_img.png&w=640&q=75 1x, /_next/image?url=%2Fassets%2Fpm-images%2Fcode_img.png&w=1200&q=75 2x"
              style="color: transparent;"
              width="550"
            />
          </div>
          <div
            class="build_paymaster"
          >
            <h2>
              Build Paymasters
            </h2>
            <p
              class="text-slate-400 my-6"
            >
              Integrate our typescript SDK to form paymasters compatible zk transaction objects in your dapps. Explore SDK
            </p>
            <button
              class="px-3 py-2 w-40 hover:bg-purple-900 bg-purple-600 rounded-md"
            >
              Explore SDK
            </button>
          </div>
          <div
            class="build_blur"
          />
        </div>
      </section>
      <div
        class="js_client_section"
      >
        <div
          class="clients_content"
        >
          <div
            class="px-5"
          >
            <h5
              class=""
            >
              JS Client Library
            </h5>
            <p
              class="text-slate-400 text-sm flex justify-start"
            >
              Lorem ipsum dolor sit amet consectetur. Sit lectus ac et turpis eu ultricies odio praesent in.
            </p>
            <p
              class="flex justify-start text-jsClientGlow align-middle content-center p-2"
            >
              <span>
                <img
                  alt="paymaster JS docs"
                  class="mr-2"
                  data-nimg="1"
                  decoding="async"
                  height="20"
                  object-fit="cover"
                  src="/_next/image?url=%2Fassets%2Fpm-icons%2Fnpm.png&w=96&q=75"
                  srcset="/_next/image?url=%2Fassets%2Fpm-icons%2Fnpm.png&w=48&q=75 1x, /_next/image?url=%2Fassets%2Fpm-icons%2Fnpm.png&w=96&q=75 2x"
                  style="color: transparent;"
                  width="48"
                />
              </span>
              Js docs
            </p>
          </div>
          <div
            class="px-5"
          >
            <h5
              class="text-center"
            >
              HTTP API
            </h5>
            <p
              class="text-slate-400 text-sm"
            >
              Lorem ipsum dolor sit amet consectetur. Sit lectus ac et turpis eu ultricies odio praesent in.
            </p>
            <p
              class="flex justify-start text-jsClientGlow align-middle content-center p-2"
            >
              <span>
                <img
                  alt="paymaster http API"
                  class="mr-2"
                  data-nimg="1"
                  decoding="async"
                  height="20"
                  object-fit="cover"
                  src="/_next/image?url=%2Fassets%2Fpm-icons%2Fcode-braces.png&w=96&q=75"
                  srcset="/_next/image?url=%2Fassets%2Fpm-icons%2Fcode-braces.png&w=48&q=75 1x, /_next/image?url=%2Fassets%2Fpm-icons%2Fcode-braces.png&w=96&q=75 2x"
                  style="color: transparent;"
                  width="48"
                />
              </span>
              HTTP Docs
            </p>
          </div>
          <div
            class="px-5"
          >
            <h5
              class="text-center"
            >
              Web App
            </h5>
            <p
              class="text-slate-400 text-sm mb-1"
            >
              Lorem ipsum dolor sit amet consectetur. Sit lectus ac et turpis eu ultricies odio praesent in.
            </p>
            <p
              class="flex justify-start text-jsClientGlow align-middle content-center p-2"
            >
              <span>
                <img
                  alt="paymaster Web app"
                  class="mr-2"
                  data-nimg="1"
                  decoding="async"
                  height="20"
                  object-fit="cover"
                  src="/_next/image?url=%2Fassets%2Fpm-icons%2Fcopy.png&w=96&q=75"
                  srcset="/_next/image?url=%2Fassets%2Fpm-icons%2Fcopy.png&w=48&q=75 1x, /_next/image?url=%2Fassets%2Fpm-icons%2Fcopy.png&w=96&q=75 2x"
                  style="color: transparent;"
                  width="40"
                />
              </span>
              Make Your First Upload
            </p>
          </div>
        </div>
        <div
          class="prog_langs px-5"
        >
          <h5
            class="pl-1"
          >
            Supported Languages
          </h5>
          <div
            class="sub_prog_langs w-full mt-3"
          >
            <div>
              <a
                class="p-2 bg-jsClientDark rounded-md w-36 mx-3"
              >
                 Nodejs
              </a>
            </div>
            <div>
              <a
                class="p-2 bg-jsClientDark rounded-md w-36 mx-3"
              >
                Solidity
              </a>
            </div>
            <div>
              <a
                class="p-2 bg-jsClientDark rounded-md w-38 h-10 mx-3"
              >
                 
                Javascript
              </a>
            </div>
            <div>
              <a
                class="p-2 bg-jsClientDark rounded-md w-38 h-10 mx-3"
              >
                 
                Typescript
              </a>
            </div>
            <div>
              <a
                class="p-2 bg-jsClientDark rounded-md w-38 h-10 mx-3"
              >
                 
                Cairo
              </a>
            </div>
          </div>
        </div>
      </div>
      <section
        class="fourth_section"
      >
        <h4
          class="text-center"
        >
          Our Partners
        </h4>
        <div
          class="partners_logos"
        >
          <span
            class="zksynk"
          >
            <img
              alt="zkSynk image"
              data-nimg="1"
              decoding="async"
              height="50"
              object-fit="cover"
              src="/_next/image?url=%2Fassets%2Fpm-logos%2FzkSynk.png&w=128&q=75"
              srcset="/_next/image?url=%2Fassets%2Fpm-logos%2FzkSynk.png&w=64&q=75 1x, /_next/image?url=%2Fassets%2Fpm-logos%2FzkSynk.png&w=128&q=75 2x"
              style="color: transparent;"
              width="60"
            />
          </span>
          <span
            class="starknet"
          >
            <img
              alt="StarkNet image"
              data-nimg="1"
              decoding="async"
              height="50"
              object-fit="cover"
              src="/_next/image?url=%2Fassets%2Fpm-logos%2FStarkNet.png&w=128&q=75"
              srcset="/_next/image?url=%2Fassets%2Fpm-logos%2FStarkNet.png&w=64&q=75 1x, /_next/image?url=%2Fassets%2Fpm-logos%2FStarkNet.png&w=128&q=75 2x"
              style="color: transparent;"
              width="60"
            />
          </span>
          <span
            class="bravos"
          >
            <img
              alt="Bravos image"
              data-nimg="1"
              decoding="async"
              height="50"
              object-fit="cover"
              src="/_next/image?url=%2Fassets%2Fpm-logos%2FBraavos.png&w=128&q=75"
              srcset="/_next/image?url=%2Fassets%2Fpm-logos%2FBraavos.png&w=64&q=75 1x, /_next/image?url=%2Fassets%2Fpm-logos%2FBraavos.png&w=128&q=75 2x"
              style="color: transparent;"
              width="60"
            />
          </span>
          <span
            class="argent"
          >
            <img
              alt="Argent image"
              data-nimg="1"
              decoding="async"
              height="50"
              object-fit="cover"
              src="/_next/image?url=%2Fassets%2Fpm-logos%2FArgent.png&w=128&q=75"
              srcset="/_next/image?url=%2Fassets%2Fpm-logos%2FArgent.png&w=64&q=75 1x, /_next/image?url=%2Fassets%2Fpm-logos%2FArgent.png&w=128&q=75 2x"
              style="color: transparent;"
              width="60"
            />
          </span>
          <span
            class="chainlink"
          >
            <img
              alt="ChainLink image"
              data-nimg="1"
              decoding="async"
              height="50"
              object-fit="cover"
              src="/_next/image?url=%2Fassets%2Fpm-logos%2FChainLink.png&w=128&q=75"
              srcset="/_next/image?url=%2Fassets%2Fpm-logos%2FChainLink.png&w=64&q=75 1x, /_next/image?url=%2Fassets%2Fpm-logos%2FChainLink.png&w=128&q=75 2x"
              style="color: transparent;"
              width="60"
            />
          </span>
          <span
            class="outlier"
          >
            <img
              alt="Outlier image"
              data-nimg="1"
              decoding="async"
              height="50"
              object-fit="cover"
              src="/_next/image?url=%2Fassets%2Fpm-logos%2FOutlier.png&w=128&q=75"
              srcset="/_next/image?url=%2Fassets%2Fpm-logos%2FOutlier.png&w=64&q=75 1x, /_next/image?url=%2Fassets%2Fpm-logos%2FOutlier.png&w=128&q=75 2x"
              style="color: transparent;"
              width="60"
            />
          </span>
          <span
            class="dao"
          >
            <img
              alt="developer_dao image"
              data-nimg="1"
              decoding="async"
              height="50"
              object-fit="cover"
              src="/_next/image?url=%2Fassets%2Fpm-logos%2Fdeveloper_dao.png&w=128&q=75"
              srcset="/_next/image?url=%2Fassets%2Fpm-logos%2Fdeveloper_dao.png&w=64&q=75 1x, /_next/image?url=%2Fassets%2Fpm-logos%2Fdeveloper_dao.png&w=128&q=75 2x"
              style="color: transparent;"
              width="60"
            />
          </span>
        </div>
      </section>
      <section
        class="fifth_section"
      >
        <div
          class="get_started"
        >
          <h5>
            Get Started, Explore And Create Paymasters
          </h5>
          <button
            class="px-3 py-1 mt-6 rounded-md"
          >
            Launch App
          </button>
        </div>
        <div
          class="get_started_image"
        >
          <img
            alt="paymaster getstarted image"
            data-nimg="1"
            decoding="async"
            height="300"
            object-fit="cover"
            src="/_next/image?url=%2Fassets%2Fpm-images%2FFrame55.png&w=2048&q=75"
            srcset="/_next/image?url=%2Fassets%2Fpm-images%2FFrame55.png&w=1080&q=75 1x, /_next/image?url=%2Fassets%2Fpm-images%2FFrame55.png&w=2048&q=75 2x"
            style="color: transparent;"
            width="974"
          />
        </div>
      </section>
      <section
        class="subscribe_section"
      >
        <div
          class="subscribe_logo"
        >
          <img
            alt="paymaster logo"
            data-nimg="1"
            decoding="async"
            height="30"
            src="/_next/image?url=%2Fassets%2Fpm-images%2Flogo.png&w=256&q=75"
            srcset="/_next/image?url=%2Fassets%2Fpm-images%2Flogo.png&w=128&q=75 1x, /_next/image?url=%2Fassets%2Fpm-images%2Flogo.png&w=256&q=75 2x"
            style="color: transparent;"
            width="120"
          />
        </div>
        <p
          class=" mb-1"
        />
        <form>
          <label
            for="subscribe"
          >
            Subscribe to our news letter
          </label>
          <br />
          <input
            class="pl-2"
            id="subscribe"
            name="subscribe"
            placeholder="Enter your email"
            type="email"
          />
          <button
            class="px-3 py-1 hover:bg-purple-900 bg-purple-600 m-2 rounded-md"
            name="subscribe"
          >
            Subscribe
          </button>
        </form>
      </section>
      <footer
        class="bottom pl-2"
      >
        <hr
          class=""
        />
        <p>
          © 2023 Paymasters. All rights reserved. 
        </p>
        <ul>
          <li
            data-testid="footer-list-item"
          >
            <a
              href="#"
            >
              Discord
            </a>
             
          </li>
          <li
            data-testid="footer-list-item"
          >
            <a
              href="#"
            >
              Telegram 
            </a>
          </li>
          <li
            data-testid="footer-list-item"
          >
            <a
              href="#"
            >
              Twitter 
            </a>
          </li>
          <li
            data-testid="footer-list-item"
          >
            <a
              href="#"
            >
              Github
            </a>
             
          </li>
          <li
            data-testid="footer-list-item"
          >
            <a
              href="#"
            >
              Contact
            </a>
             
          </li>
          <li
            data-testid="footer-list-item"
          >
            <a
              href="#"
            >
              Privacy
            </a>
             
          </li>
        </ul>
      </footer>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Landing page  should render the landing page  1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="container scaleto100 mx-auto min-h-(65vh)"
      >
        <div
          class="grid-container"
        >
          <nav
            class="paynav"
          >
            <a
              class="paylogo"
              href="/"
            >
              <img
                alt="paymaster logo"
                data-nimg="1"
                decoding="async"
                height="50"
                src="/_next/image?url=%2Fassets%2Fpm-images%2Flogo.png&w=256&q=75"
                srcset="/_next/image?url=%2Fassets%2Fpm-images%2Flogo.png&w=128&q=75 1x, /_next/image?url=%2Fassets%2Fpm-images%2Flogo.png&w=256&q=75 2x"
                style="color: transparent;"
                width="120"
              />
            </a>
            <ul
              class="list-ul"
            >
              <li
                data-testid="list-items"
              >
                <a
                  class="mx-1 py-1"
                  href="#"
                >
                  Docs
                </a>
              </li>
              <li
                data-testid="list-items"
              >
                <button
                  class="px-1 m-0 py-1 lg:w-40 hover:bg-purple-600 border-solid border-2 border-slate-400 rounded-md"
                >
                  Coming Soon
                </button>
              </li>
            </ul>
          </nav>
          <section
            class="first_section"
          >
            <div
              class="heading_section"
            >
              <h1>
                The only paymaster's access infrastructure you will need
              </h1>
              <p
                class="text-slate-400 my-6"
              >
                Using paymaster to simplify zk transactions and provide
                <br />
                 superior ux to dapps
              </p>
              <button
                class="px-3 py-1 "
              >
                Coming soon
              </button>
            </div>
            <div
              class="heading_image"
            >
              <img
                alt="paymaster-planet-logo"
                data-nimg="1"
                data-testid="planet_img"
                decoding="async"
                height="322"
                src="/_next/image?url=%2Fassets%2Fpm-images%2Fheader_image.png&w=1080&q=75"
                srcset="/_next/image?url=%2Fassets%2Fpm-images%2Fheader_image.png&w=640&q=75 1x, /_next/image?url=%2Fassets%2Fpm-images%2Fheader_image.png&w=1080&q=75 2x"
                style="color: transparent;"
                width="452"
              />
            </div>
            <div
              class="planet_blur"
            />
          </section>
          <footer
            class="bottom pl-2"
          >
            <hr
              class=""
            />
            <p>
              © 2023 Paymasters. All rights reserved. 
            </p>
            <ul>
              <li
                data-testid="footer-list-item"
              >
                <a
                  href="#"
                >
                  Discord
                </a>
                 
              </li>
              <li
                data-testid="footer-list-item"
              >
                <a
                  href="#"
                >
                  Telegram 
                </a>
              </li>
              <li
                data-testid="footer-list-item"
              >
                <a
                  href="#"
                >
                  Twitter 
                </a>
              </li>
              <li
                data-testid="footer-list-item"
              >
                <a
                  href="#"
                >
                  Github
                </a>
                 
              </li>
              <li
                data-testid="footer-list-item"
              >
                <a
                  href="#"
                >
                  Contact
                </a>
                 
              </li>
              <li
                data-testid="footer-list-item"
              >
                <a
                  href="#"
                >
                  Privacy
                </a>
                 
              </li>
            </ul>
          </footer>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="container scaleto100 mx-auto min-h-(65vh)"
    >
      <div
        class="grid-container"
      >
        <nav
          class="paynav"
        >
          <a
            class="paylogo"
            href="/"
          >
            <img
              alt="paymaster logo"
              data-nimg="1"
              decoding="async"
              height="50"
              src="/_next/image?url=%2Fassets%2Fpm-images%2Flogo.png&w=256&q=75"
              srcset="/_next/image?url=%2Fassets%2Fpm-images%2Flogo.png&w=128&q=75 1x, /_next/image?url=%2Fassets%2Fpm-images%2Flogo.png&w=256&q=75 2x"
              style="color: transparent;"
              width="120"
            />
          </a>
          <ul
            class="list-ul"
          >
            <li
              data-testid="list-items"
            >
              <a
                class="mx-1 py-1"
                href="#"
              >
                Docs
              </a>
            </li>
            <li
              data-testid="list-items"
            >
              <button
                class="px-1 m-0 py-1 lg:w-40 hover:bg-purple-600 border-solid border-2 border-slate-400 rounded-md"
              >
                Coming Soon
              </button>
            </li>
          </ul>
        </nav>
        <section
          class="first_section"
        >
          <div
            class="heading_section"
          >
            <h1>
              The only paymaster's access infrastructure you will need
            </h1>
            <p
              class="text-slate-400 my-6"
            >
              Using paymaster to simplify zk transactions and provide
              <br />
               superior ux to dapps
            </p>
            <button
              class="px-3 py-1 "
            >
              Coming soon
            </button>
          </div>
          <div
            class="heading_image"
          >
            <img
              alt="paymaster-planet-logo"
              data-nimg="1"
              data-testid="planet_img"
              decoding="async"
              height="322"
              src="/_next/image?url=%2Fassets%2Fpm-images%2Fheader_image.png&w=1080&q=75"
              srcset="/_next/image?url=%2Fassets%2Fpm-images%2Fheader_image.png&w=640&q=75 1x, /_next/image?url=%2Fassets%2Fpm-images%2Fheader_image.png&w=1080&q=75 2x"
              style="color: transparent;"
              width="452"
            />
          </div>
          <div
            class="planet_blur"
          />
        </section>
        <footer
          class="bottom pl-2"
        >
          <hr
            class=""
          />
          <p>
            © 2023 Paymasters. All rights reserved. 
          </p>
          <ul>
            <li
              data-testid="footer-list-item"
            >
              <a
                href="#"
              >
                Discord
              </a>
               
            </li>
            <li
              data-testid="footer-list-item"
            >
              <a
                href="#"
              >
                Telegram 
              </a>
            </li>
            <li
              data-testid="footer-list-item"
            >
              <a
                href="#"
              >
                Twitter 
              </a>
            </li>
            <li
              data-testid="footer-list-item"
            >
              <a
                href="#"
              >
                Github
              </a>
               
            </li>
            <li
              data-testid="footer-list-item"
            >
              <a
                href="#"
              >
                Contact
              </a>
               
            </li>
            <li
              data-testid="footer-list-item"
            >
              <a
                href="#"
              >
                Privacy
              </a>
               
            </li>
          </ul>
        </footer>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Landing page  should render the paymasters list page  1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="container scaleto100 px-1 mx-auto min-h-(65vh)"
      >
        <nav
          class="active-paymaster-nav"
        >
          <a
            class="paylogo"
            href="/"
          >
            <img
              alt="paymaster logo"
              data-nimg="1"
              data-testid="logo"
              decoding="async"
              height="50"
              src="/_next/image?url=%2Fassets%2Fpm-images%2Flogo.png&w=256&q=75"
              srcset="/_next/image?url=%2Fassets%2Fpm-images%2Flogo.png&w=128&q=75 1x, /_next/image?url=%2Fassets%2Fpm-images%2Flogo.png&w=256&q=75 2x"
              style="color: transparent;"
              width="120"
            />
          </a>
          <ul
            class="list-ul"
          >
            <li
              data-testid="list-items"
            >
              <div>
                <select
                  class="bg-black px-1 py-1 h-9"
                  name="crypto"
                >
                  <option
                    value="ethereum"
                  >
                    Ethereum
                  </option>
                  <option
                    value="ethereum"
                  >
                    Ethereum
                  </option>
                </select>
              </div>
            </li>
            <li
              data-testid="list-items"
            >
              <button
                class="p-2 pm-0 w-30 sm:w-40 sm:after:content-['_Paymaster'] sm:h-9 bg-purple-600 rounded-md"
              >
                Create
              </button>
            </li>
          </ul>
        </nav>
        <div
          class="container w-[934px] mx-auto my-0"
        >
          <div
            class="relative py-9 border-b-[.2px] border-opacity-10 border-b-slate-200"
          >
            <h5
              class="absolute top-[100px] text-lg font-semibold"
              id="paymaster_active_header"
            >
              Active paymaster
            </h5>
            <div
              class="active_first_section"
            >
              <div
                class="active_logo"
              >
                <img
                  alt="paymaster active logo"
                  data-nimg="1"
                  data-testid="test_img"
                  decoding="async"
                  height="36"
                  src="/_next/image?url=%2Fassets%2Fpm-icons%2Fzeta.png&w=96&q=75"
                  srcset="/_next/image?url=%2Fassets%2Fpm-icons%2Fzeta.png&w=48&q=75 1x, /_next/image?url=%2Fassets%2Fpm-icons%2Fzeta.png&w=96&q=75 2x"
                  style="color: transparent;"
                  width="36"
                />
              </div>
              <p>
                <span
                  class="font-bold text-xl"
                >
                  ZetaChain
                </span>
                <br />
                <span
                  class="text-white text-opacity-30"
                >
                   
                  Lorem ipsum dolor sit amet consectetur. In vulputate ac elit.
                </span>
              </p>
              <div
                class="active_text"
              >
                <h5>
                  Active
                  <span>
                    <img
                      alt="paymaster active check"
                      data-nimg="1"
                      decoding="async"
                      height="7"
                      src="/_next/image?url=%2Fassets%2Fpm-icons%2Fcheck.png&w=16&q=75"
                      srcset="/_next/image?url=%2Fassets%2Fpm-icons%2Fcheck.png&w=16&q=75 1x"
                      style="color: transparent;"
                      width="8"
                    />
                  </span>
                </h5>
              </div>
            </div>
            <div
              class="relative mt-[99px]"
            >
              <label
                for="search"
              />
              <input
                class="w-[340px] sm:w-[645px] h-[45px] pl-10 bg-black bg-opacity-20 "
                id="search"
                name="paymastersearch"
                placeholder="Search paymasters"
                type="text"
              />
              <span
                class="absolute left-4 mt-3"
              >
                <img
                  alt="paymaster active logo"
                  data-nimg="1"
                  decoding="async"
                  height="17"
                  src="/_next/image?url=%2Fassets%2Fpm-icons%2Fsearch.png&w=48&q=75"
                  srcset="/_next/image?url=%2Fassets%2Fpm-icons%2Fsearch.png&w=32&q=75 1x, /_next/image?url=%2Fassets%2Fpm-icons%2Fsearch.png&w=48&q=75 2x"
                  style="color: transparent;"
                  width="17"
                />
              </span>
            </div>
          </div>
          <div
            class="relative py-9 "
          >
            <h5
              class="absolute top-[100px] text-lg mb-2 font-semibold"
              id="paymaster_heading"
            >
              All paymasters
            </h5>
            <div
              class="container "
            >
              <div
                class="allpaymasters"
              >
                <div
                  class="active_logo"
                >
                  <img
                    alt="paymaster active logo"
                    data-nimg="1"
                    data-testid="activeimg"
                    decoding="async"
                    height="36"
                    src="/_next/image?url=%2Fassets%2Fpm-icons%2Fzeta.png&w=96&q=75"
                    srcset="/_next/image?url=%2Fassets%2Fpm-icons%2Fzeta.png&w=48&q=75 1x, /_next/image?url=%2Fassets%2Fpm-icons%2Fzeta.png&w=96&q=75 2x"
                    style="color: transparent;"
                    width="36"
                  />
                </div>
                <p>
                  <span
                    class="font-bold text-xl"
                  >
                    ZetaChain
                  </span>
                  <br />
                  <span
                    class="text-white text-opacity-30"
                  >
                     
                    Lorem ipsum dolor sit amet consectetur. Purus morbi aliquam risus velit a faucibus urna volutpat nam. Est curabitur viverra.
                  </span>
                </p>
                <div
                  class="requirements"
                >
                  <p
                    class=" text-[#E170FF] text-sm font-semibold"
                  >
                    Requirements
                    <img
                      alt="paymaster check_circle"
                      data-nimg="1"
                      decoding="async"
                      height="5"
                      src="/_next/image?url=%2Fassets%2Fpm-icons%2Fexpand_more.png&w=16&q=75"
                      srcset="/_next/image?url=%2Fassets%2Fpm-icons%2Fexpand_more.png&w=16&q=75 1x"
                      style="color: transparent;"
                      width="7"
                    />
                  </p>
                   
                  <ul>
                    <li>
                      <img
                        alt="paymaster check_circle"
                        data-nimg="1"
                        decoding="async"
                        height="13"
                        src="/_next/image?url=%2Fassets%2Fpm-icons%2Fcheck_circle.png&w=32&q=75"
                        srcset="/_next/image?url=%2Fassets%2Fpm-icons%2Fcheck_circle.png&w=16&q=75 1x, /_next/image?url=%2Fassets%2Fpm-icons%2Fcheck_circle.png&w=32&q=75 2x"
                        style="color: transparent;"
                        width="13"
                      />
                       
                      max nounce 100
                       
                    </li>
                    <li>
                      <img
                        alt="paymaster check_circle"
                        data-nimg="1"
                        decoding="async"
                        height="13"
                        src="/_next/image?url=%2Fassets%2Fpm-icons%2Fcheck_circle.png&w=32&q=75"
                        srcset="/_next/image?url=%2Fassets%2Fpm-icons%2Fcheck_circle.png&w=16&q=75 1x, /_next/image?url=%2Fassets%2Fpm-icons%2Fcheck_circle.png&w=32&q=75 2x"
                        style="color: transparent;"
                        width="13"
                      />
                       
                      1 bonq NFT
                       
                    </li>
                    <li>
                      <img
                        alt="paymaster active logo"
                        data-nimg="1"
                        decoding="async"
                        height="13"
                        src="/_next/image?url=%2Fassets%2Fpm-icons%2Fcheck_circle.png&w=32&q=75"
                        srcset="/_next/image?url=%2Fassets%2Fpm-icons%2Fcheck_circle.png&w=16&q=75 1x, /_next/image?url=%2Fassets%2Fpm-icons%2Fcheck_circle.png&w=32&q=75 2x"
                        style="color: transparent;"
                        width="13"
                      />
                       
                      400 Eth tokens
                       
                    </li>
                  </ul>
                </div>
                <div
                  class="usebtn"
                >
                  <button
                    class="bg-[#9B2ACD] bg-opacity-20 w-[76px] h-[26px] rounded-md"
                  >
                    Use
                  </button>
                </div>
              </div>
            </div>
            <div
              class="container "
            >
              <div
                class="allpaymasters"
              >
                <div
                  class="active_logo"
                >
                  <img
                    alt="paymaster active logo"
                    data-nimg="1"
                    data-testid="activeimg"
                    decoding="async"
                    height="36"
                    src="/_next/image?url=%2Fassets%2Fpm-icons%2Fzeta.png&w=96&q=75"
                    srcset="/_next/image?url=%2Fassets%2Fpm-icons%2Fzeta.png&w=48&q=75 1x, /_next/image?url=%2Fassets%2Fpm-icons%2Fzeta.png&w=96&q=75 2x"
                    style="color: transparent;"
                    width="36"
                  />
                </div>
                <p>
                  <span
                    class="font-bold text-xl"
                  >
                    ZetaChain
                  </span>
                  <br />
                  <span
                    class="text-white text-opacity-30"
                  >
                     
                    Lorem ipsum dolor sit amet consectetur. Purus morbi aliquam risus velit a faucibus urna volutpat nam. Est curabitur viverra.
                  </span>
                </p>
                <div
                  class="requirements"
                >
                  <p
                    class=" text-[#E170FF] text-sm font-semibold"
                  >
                    Requirements
                    <img
                      alt="paymaster check_circle"
                      data-nimg="1"
                      decoding="async"
                      height="5"
                      src="/_next/image?url=%2Fassets%2Fpm-icons%2Fexpand_more.png&w=16&q=75"
                      srcset="/_next/image?url=%2Fassets%2Fpm-icons%2Fexpand_more.png&w=16&q=75 1x"
                      style="color: transparent;"
                      width="7"
                    />
                  </p>
                   
                  <ul>
                    <li>
                      <img
                        alt="paymaster check_circle"
                        data-nimg="1"
                        decoding="async"
                        height="13"
                        src="/_next/image?url=%2Fassets%2Fpm-icons%2Fcheck_circle.png&w=32&q=75"
                        srcset="/_next/image?url=%2Fassets%2Fpm-icons%2Fcheck_circle.png&w=16&q=75 1x, /_next/image?url=%2Fassets%2Fpm-icons%2Fcheck_circle.png&w=32&q=75 2x"
                        style="color: transparent;"
                        width="13"
                      />
                       
                      max nounce 100
                       
                    </li>
                    <li>
                      <img
                        alt="paymaster check_circle"
                        data-nimg="1"
                        decoding="async"
                        height="13"
                        src="/_next/image?url=%2Fassets%2Fpm-icons%2Fcheck_circle.png&w=32&q=75"
                        srcset="/_next/image?url=%2Fassets%2Fpm-icons%2Fcheck_circle.png&w=16&q=75 1x, /_next/image?url=%2Fassets%2Fpm-icons%2Fcheck_circle.png&w=32&q=75 2x"
                        style="color: transparent;"
                        width="13"
                      />
                       
                      1 bonq NFT
                       
                    </li>
                    <li>
                      <img
                        alt="paymaster active logo"
                        data-nimg="1"
                        decoding="async"
                        height="13"
                        src="/_next/image?url=%2Fassets%2Fpm-icons%2Fcheck_circle.png&w=32&q=75"
                        srcset="/_next/image?url=%2Fassets%2Fpm-icons%2Fcheck_circle.png&w=16&q=75 1x, /_next/image?url=%2Fassets%2Fpm-icons%2Fcheck_circle.png&w=32&q=75 2x"
                        style="color: transparent;"
                        width="13"
                      />
                       
                      400 Eth tokens
                       
                    </li>
                  </ul>
                </div>
                <div
                  class="usebtn"
                >
                  <button
                    class="bg-[#9B2ACD] bg-opacity-20 w-[76px] h-[26px] rounded-md"
                  >
                    Use
                  </button>
                </div>
              </div>
            </div>
            <div
              class="container "
            >
              <div
                class="allpaymasters"
              >
                <div
                  class="active_logo"
                >
                  <img
                    alt="paymaster active logo"
                    data-nimg="1"
                    data-testid="activeimg"
                    decoding="async"
                    height="36"
                    src="/_next/image?url=%2Fassets%2Fpm-icons%2Fzeta.png&w=96&q=75"
                    srcset="/_next/image?url=%2Fassets%2Fpm-icons%2Fzeta.png&w=48&q=75 1x, /_next/image?url=%2Fassets%2Fpm-icons%2Fzeta.png&w=96&q=75 2x"
                    style="color: transparent;"
                    width="36"
                  />
                </div>
                <p>
                  <span
                    class="font-bold text-xl"
                  >
                    ZetaChain
                  </span>
                  <br />
                  <span
                    class="text-white text-opacity-30"
                  >
                     
                    Lorem ipsum dolor sit amet consectetur. Purus morbi aliquam risus velit a faucibus urna volutpat nam. Est curabitur viverra.
                  </span>
                </p>
                <div
                  class="requirements"
                >
                  <p
                    class=" text-[#E170FF] text-sm font-semibold"
                  >
                    Requirements
                    <img
                      alt="paymaster check_circle"
                      data-nimg="1"
                      decoding="async"
                      height="5"
                      src="/_next/image?url=%2Fassets%2Fpm-icons%2Fexpand_more.png&w=16&q=75"
                      srcset="/_next/image?url=%2Fassets%2Fpm-icons%2Fexpand_more.png&w=16&q=75 1x"
                      style="color: transparent;"
                      width="7"
                    />
                  </p>
                   
                  <ul>
                    <li>
                      <img
                        alt="paymaster check_circle"
                        data-nimg="1"
                        decoding="async"
                        height="13"
                        src="/_next/image?url=%2Fassets%2Fpm-icons%2Fcheck_circle.png&w=32&q=75"
                        srcset="/_next/image?url=%2Fassets%2Fpm-icons%2Fcheck_circle.png&w=16&q=75 1x, /_next/image?url=%2Fassets%2Fpm-icons%2Fcheck_circle.png&w=32&q=75 2x"
                        style="color: transparent;"
                        width="13"
                      />
                       
                      max nounce 100
                       
                    </li>
                    <li>
                      <img
                        alt="paymaster check_circle"
                        data-nimg="1"
                        decoding="async"
                        height="13"
                        src="/_next/image?url=%2Fassets%2Fpm-icons%2Fcheck_circle.png&w=32&q=75"
                        srcset="/_next/image?url=%2Fassets%2Fpm-icons%2Fcheck_circle.png&w=16&q=75 1x, /_next/image?url=%2Fassets%2Fpm-icons%2Fcheck_circle.png&w=32&q=75 2x"
                        style="color: transparent;"
                        width="13"
                      />
                       
                      1 bonq NFT
                       
                    </li>
                    <li>
                      <img
                        alt="paymaster active logo"
                        data-nimg="1"
                        decoding="async"
                        height="13"
                        src="/_next/image?url=%2Fassets%2Fpm-icons%2Fcheck_circle.png&w=32&q=75"
                        srcset="/_next/image?url=%2Fassets%2Fpm-icons%2Fcheck_circle.png&w=16&q=75 1x, /_next/image?url=%2Fassets%2Fpm-icons%2Fcheck_circle.png&w=32&q=75 2x"
                        style="color: transparent;"
                        width="13"
                      />
                       
                      400 Eth tokens
                       
                    </li>
                  </ul>
                </div>
                <div
                  class="usebtn"
                >
                  <button
                    class="bg-[#9B2ACD] bg-opacity-20 w-[76px] h-[26px] rounded-md"
                  >
                    Use
                  </button>
                </div>
              </div>
            </div>
          </div>
          <div
            class="flex ml-4 sm:justify-center sm:mx-auto bg-[#9B2ACD] bg-opacity-20 w-[118px] h-[45px] rounded-md items-center my-6"
          >
            <button
              class="p-8"
            >
              Load
            </button>
          </div>
        </div>
        <footer
          class="bottom pl-2"
        >
          <hr
            class=""
          />
          <p>
            © 2023 Paymasters. All rights reserved. 
          </p>
          <ul>
            <li
              data-testid="footer-list-item"
            >
              <a
                href="#"
              >
                Discord
              </a>
               
            </li>
            <li
              data-testid="footer-list-item"
            >
              <a
                href="#"
              >
                Telegram 
              </a>
            </li>
            <li
              data-testid="footer-list-item"
            >
              <a
                href="#"
              >
                Twitter 
              </a>
            </li>
            <li
              data-testid="footer-list-item"
            >
              <a
                href="#"
              >
                Github
              </a>
               
            </li>
            <li
              data-testid="footer-list-item"
            >
              <a
                href="#"
              >
                Contact
              </a>
               
            </li>
            <li
              data-testid="footer-list-item"
            >
              <a
                href="#"
              >
                Privacy
              </a>
               
            </li>
          </ul>
        </footer>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="container scaleto100 px-1 mx-auto min-h-(65vh)"
    >
      <nav
        class="active-paymaster-nav"
      >
        <a
          class="paylogo"
          href="/"
        >
          <img
            alt="paymaster logo"
            data-nimg="1"
            data-testid="logo"
            decoding="async"
            height="50"
            src="/_next/image?url=%2Fassets%2Fpm-images%2Flogo.png&w=256&q=75"
            srcset="/_next/image?url=%2Fassets%2Fpm-images%2Flogo.png&w=128&q=75 1x, /_next/image?url=%2Fassets%2Fpm-images%2Flogo.png&w=256&q=75 2x"
            style="color: transparent;"
            width="120"
          />
        </a>
        <ul
          class="list-ul"
        >
          <li
            data-testid="list-items"
          >
            <div>
              <select
                class="bg-black px-1 py-1 h-9"
                name="crypto"
              >
                <option
                  value="ethereum"
                >
                  Ethereum
                </option>
                <option
                  value="ethereum"
                >
                  Ethereum
                </option>
              </select>
            </div>
          </li>
          <li
            data-testid="list-items"
          >
            <button
              class="p-2 pm-0 w-30 sm:w-40 sm:after:content-['_Paymaster'] sm:h-9 bg-purple-600 rounded-md"
            >
              Create
            </button>
          </li>
        </ul>
      </nav>
      <div
        class="container w-[934px] mx-auto my-0"
      >
        <div
          class="relative py-9 border-b-[.2px] border-opacity-10 border-b-slate-200"
        >
          <h5
            class="absolute top-[100px] text-lg font-semibold"
            id="paymaster_active_header"
          >
            Active paymaster
          </h5>
          <div
            class="active_first_section"
          >
            <div
              class="active_logo"
            >
              <img
                alt="paymaster active logo"
                data-nimg="1"
                data-testid="test_img"
                decoding="async"
                height="36"
                src="/_next/image?url=%2Fassets%2Fpm-icons%2Fzeta.png&w=96&q=75"
                srcset="/_next/image?url=%2Fassets%2Fpm-icons%2Fzeta.png&w=48&q=75 1x, /_next/image?url=%2Fassets%2Fpm-icons%2Fzeta.png&w=96&q=75 2x"
                style="color: transparent;"
                width="36"
              />
            </div>
            <p>
              <span
                class="font-bold text-xl"
              >
                ZetaChain
              </span>
              <br />
              <span
                class="text-white text-opacity-30"
              >
                 
                Lorem ipsum dolor sit amet consectetur. In vulputate ac elit.
              </span>
            </p>
            <div
              class="active_text"
            >
              <h5>
                Active
                <span>
                  <img
                    alt="paymaster active check"
                    data-nimg="1"
                    decoding="async"
                    height="7"
                    src="/_next/image?url=%2Fassets%2Fpm-icons%2Fcheck.png&w=16&q=75"
                    srcset="/_next/image?url=%2Fassets%2Fpm-icons%2Fcheck.png&w=16&q=75 1x"
                    style="color: transparent;"
                    width="8"
                  />
                </span>
              </h5>
            </div>
          </div>
          <div
            class="relative mt-[99px]"
          >
            <label
              for="search"
            />
            <input
              class="w-[340px] sm:w-[645px] h-[45px] pl-10 bg-black bg-opacity-20 "
              id="search"
              name="paymastersearch"
              placeholder="Search paymasters"
              type="text"
            />
            <span
              class="absolute left-4 mt-3"
            >
              <img
                alt="paymaster active logo"
                data-nimg="1"
                decoding="async"
                height="17"
                src="/_next/image?url=%2Fassets%2Fpm-icons%2Fsearch.png&w=48&q=75"
                srcset="/_next/image?url=%2Fassets%2Fpm-icons%2Fsearch.png&w=32&q=75 1x, /_next/image?url=%2Fassets%2Fpm-icons%2Fsearch.png&w=48&q=75 2x"
                style="color: transparent;"
                width="17"
              />
            </span>
          </div>
        </div>
        <div
          class="relative py-9 "
        >
          <h5
            class="absolute top-[100px] text-lg mb-2 font-semibold"
            id="paymaster_heading"
          >
            All paymasters
          </h5>
          <div
            class="container "
          >
            <div
              class="allpaymasters"
            >
              <div
                class="active_logo"
              >
                <img
                  alt="paymaster active logo"
                  data-nimg="1"
                  data-testid="activeimg"
                  decoding="async"
                  height="36"
                  src="/_next/image?url=%2Fassets%2Fpm-icons%2Fzeta.png&w=96&q=75"
                  srcset="/_next/image?url=%2Fassets%2Fpm-icons%2Fzeta.png&w=48&q=75 1x, /_next/image?url=%2Fassets%2Fpm-icons%2Fzeta.png&w=96&q=75 2x"
                  style="color: transparent;"
                  width="36"
                />
              </div>
              <p>
                <span
                  class="font-bold text-xl"
                >
                  ZetaChain
                </span>
                <br />
                <span
                  class="text-white text-opacity-30"
                >
                   
                  Lorem ipsum dolor sit amet consectetur. Purus morbi aliquam risus velit a faucibus urna volutpat nam. Est curabitur viverra.
                </span>
              </p>
              <div
                class="requirements"
              >
                <p
                  class=" text-[#E170FF] text-sm font-semibold"
                >
                  Requirements
                  <img
                    alt="paymaster check_circle"
                    data-nimg="1"
                    decoding="async"
                    height="5"
                    src="/_next/image?url=%2Fassets%2Fpm-icons%2Fexpand_more.png&w=16&q=75"
                    srcset="/_next/image?url=%2Fassets%2Fpm-icons%2Fexpand_more.png&w=16&q=75 1x"
                    style="color: transparent;"
                    width="7"
                  />
                </p>
                 
                <ul>
                  <li>
                    <img
                      alt="paymaster check_circle"
                      data-nimg="1"
                      decoding="async"
                      height="13"
                      src="/_next/image?url=%2Fassets%2Fpm-icons%2Fcheck_circle.png&w=32&q=75"
                      srcset="/_next/image?url=%2Fassets%2Fpm-icons%2Fcheck_circle.png&w=16&q=75 1x, /_next/image?url=%2Fassets%2Fpm-icons%2Fcheck_circle.png&w=32&q=75 2x"
                      style="color: transparent;"
                      width="13"
                    />
                     
                    max nounce 100
                     
                  </li>
                  <li>
                    <img
                      alt="paymaster check_circle"
                      data-nimg="1"
                      decoding="async"
                      height="13"
                      src="/_next/image?url=%2Fassets%2Fpm-icons%2Fcheck_circle.png&w=32&q=75"
                      srcset="/_next/image?url=%2Fassets%2Fpm-icons%2Fcheck_circle.png&w=16&q=75 1x, /_next/image?url=%2Fassets%2Fpm-icons%2Fcheck_circle.png&w=32&q=75 2x"
                      style="color: transparent;"
                      width="13"
                    />
                     
                    1 bonq NFT
                     
                  </li>
                  <li>
                    <img
                      alt="paymaster active logo"
                      data-nimg="1"
                      decoding="async"
                      height="13"
                      src="/_next/image?url=%2Fassets%2Fpm-icons%2Fcheck_circle.png&w=32&q=75"
                      srcset="/_next/image?url=%2Fassets%2Fpm-icons%2Fcheck_circle.png&w=16&q=75 1x, /_next/image?url=%2Fassets%2Fpm-icons%2Fcheck_circle.png&w=32&q=75 2x"
                      style="color: transparent;"
                      width="13"
                    />
                     
                    400 Eth tokens
                     
                  </li>
                </ul>
              </div>
              <div
                class="usebtn"
              >
                <button
                  class="bg-[#9B2ACD] bg-opacity-20 w-[76px] h-[26px] rounded-md"
                >
                  Use
                </button>
              </div>
            </div>
          </div>
          <div
            class="container "
          >
            <div
              class="allpaymasters"
            >
              <div
                class="active_logo"
              >
                <img
                  alt="paymaster active logo"
                  data-nimg="1"
                  data-testid="activeimg"
                  decoding="async"
                  height="36"
                  src="/_next/image?url=%2Fassets%2Fpm-icons%2Fzeta.png&w=96&q=75"
                  srcset="/_next/image?url=%2Fassets%2Fpm-icons%2Fzeta.png&w=48&q=75 1x, /_next/image?url=%2Fassets%2Fpm-icons%2Fzeta.png&w=96&q=75 2x"
                  style="color: transparent;"
                  width="36"
                />
              </div>
              <p>
                <span
                  class="font-bold text-xl"
                >
                  ZetaChain
                </span>
                <br />
                <span
                  class="text-white text-opacity-30"
                >
                   
                  Lorem ipsum dolor sit amet consectetur. Purus morbi aliquam risus velit a faucibus urna volutpat nam. Est curabitur viverra.
                </span>
              </p>
              <div
                class="requirements"
              >
                <p
                  class=" text-[#E170FF] text-sm font-semibold"
                >
                  Requirements
                  <img
                    alt="paymaster check_circle"
                    data-nimg="1"
                    decoding="async"
                    height="5"
                    src="/_next/image?url=%2Fassets%2Fpm-icons%2Fexpand_more.png&w=16&q=75"
                    srcset="/_next/image?url=%2Fassets%2Fpm-icons%2Fexpand_more.png&w=16&q=75 1x"
                    style="color: transparent;"
                    width="7"
                  />
                </p>
                 
                <ul>
                  <li>
                    <img
                      alt="paymaster check_circle"
                      data-nimg="1"
                      decoding="async"
                      height="13"
                      src="/_next/image?url=%2Fassets%2Fpm-icons%2Fcheck_circle.png&w=32&q=75"
                      srcset="/_next/image?url=%2Fassets%2Fpm-icons%2Fcheck_circle.png&w=16&q=75 1x, /_next/image?url=%2Fassets%2Fpm-icons%2Fcheck_circle.png&w=32&q=75 2x"
                      style="color: transparent;"
                      width="13"
                    />
                     
                    max nounce 100
                     
                  </li>
                  <li>
                    <img
                      alt="paymaster check_circle"
                      data-nimg="1"
                      decoding="async"
                      height="13"
                      src="/_next/image?url=%2Fassets%2Fpm-icons%2Fcheck_circle.png&w=32&q=75"
                      srcset="/_next/image?url=%2Fassets%2Fpm-icons%2Fcheck_circle.png&w=16&q=75 1x, /_next/image?url=%2Fassets%2Fpm-icons%2Fcheck_circle.png&w=32&q=75 2x"
                      style="color: transparent;"
                      width="13"
                    />
                     
                    1 bonq NFT
                     
                  </li>
                  <li>
                    <img
                      alt="paymaster active logo"
                      data-nimg="1"
                      decoding="async"
                      height="13"
                      src="/_next/image?url=%2Fassets%2Fpm-icons%2Fcheck_circle.png&w=32&q=75"
                      srcset="/_next/image?url=%2Fassets%2Fpm-icons%2Fcheck_circle.png&w=16&q=75 1x, /_next/image?url=%2Fassets%2Fpm-icons%2Fcheck_circle.png&w=32&q=75 2x"
                      style="color: transparent;"
                      width="13"
                    />
                     
                    400 Eth tokens
                     
                  </li>
                </ul>
              </div>
              <div
                class="usebtn"
              >
                <button
                  class="bg-[#9B2ACD] bg-opacity-20 w-[76px] h-[26px] rounded-md"
                >
                  Use
                </button>
              </div>
            </div>
          </div>
          <div
            class="container "
          >
            <div
              class="allpaymasters"
            >
              <div
                class="active_logo"
              >
                <img
                  alt="paymaster active logo"
                  data-nimg="1"
                  data-testid="activeimg"
                  decoding="async"
                  height="36"
                  src="/_next/image?url=%2Fassets%2Fpm-icons%2Fzeta.png&w=96&q=75"
                  srcset="/_next/image?url=%2Fassets%2Fpm-icons%2Fzeta.png&w=48&q=75 1x, /_next/image?url=%2Fassets%2Fpm-icons%2Fzeta.png&w=96&q=75 2x"
                  style="color: transparent;"
                  width="36"
                />
              </div>
              <p>
                <span
                  class="font-bold text-xl"
                >
                  ZetaChain
                </span>
                <br />
                <span
                  class="text-white text-opacity-30"
                >
                   
                  Lorem ipsum dolor sit amet consectetur. Purus morbi aliquam risus velit a faucibus urna volutpat nam. Est curabitur viverra.
                </span>
              </p>
              <div
                class="requirements"
              >
                <p
                  class=" text-[#E170FF] text-sm font-semibold"
                >
                  Requirements
                  <img
                    alt="paymaster check_circle"
                    data-nimg="1"
                    decoding="async"
                    height="5"
                    src="/_next/image?url=%2Fassets%2Fpm-icons%2Fexpand_more.png&w=16&q=75"
                    srcset="/_next/image?url=%2Fassets%2Fpm-icons%2Fexpand_more.png&w=16&q=75 1x"
                    style="color: transparent;"
                    width="7"
                  />
                </p>
                 
                <ul>
                  <li>
                    <img
                      alt="paymaster check_circle"
                      data-nimg="1"
                      decoding="async"
                      height="13"
                      src="/_next/image?url=%2Fassets%2Fpm-icons%2Fcheck_circle.png&w=32&q=75"
                      srcset="/_next/image?url=%2Fassets%2Fpm-icons%2Fcheck_circle.png&w=16&q=75 1x, /_next/image?url=%2Fassets%2Fpm-icons%2Fcheck_circle.png&w=32&q=75 2x"
                      style="color: transparent;"
                      width="13"
                    />
                     
                    max nounce 100
                     
                  </li>
                  <li>
                    <img
                      alt="paymaster check_circle"
                      data-nimg="1"
                      decoding="async"
                      height="13"
                      src="/_next/image?url=%2Fassets%2Fpm-icons%2Fcheck_circle.png&w=32&q=75"
                      srcset="/_next/image?url=%2Fassets%2Fpm-icons%2Fcheck_circle.png&w=16&q=75 1x, /_next/image?url=%2Fassets%2Fpm-icons%2Fcheck_circle.png&w=32&q=75 2x"
                      style="color: transparent;"
                      width="13"
                    />
                     
                    1 bonq NFT
                     
                  </li>
                  <li>
                    <img
                      alt="paymaster active logo"
                      data-nimg="1"
                      decoding="async"
                      height="13"
                      src="/_next/image?url=%2Fassets%2Fpm-icons%2Fcheck_circle.png&w=32&q=75"
                      srcset="/_next/image?url=%2Fassets%2Fpm-icons%2Fcheck_circle.png&w=16&q=75 1x, /_next/image?url=%2Fassets%2Fpm-icons%2Fcheck_circle.png&w=32&q=75 2x"
                      style="color: transparent;"
                      width="13"
                    />
                     
                    400 Eth tokens
                     
                  </li>
                </ul>
              </div>
              <div
                class="usebtn"
              >
                <button
                  class="bg-[#9B2ACD] bg-opacity-20 w-[76px] h-[26px] rounded-md"
                >
                  Use
                </button>
              </div>
            </div>
          </div>
        </div>
        <div
          class="flex ml-4 sm:justify-center sm:mx-auto bg-[#9B2ACD] bg-opacity-20 w-[118px] h-[45px] rounded-md items-center my-6"
        >
          <button
            class="p-8"
          >
            Load
          </button>
        </div>
      </div>
      <footer
        class="bottom pl-2"
      >
        <hr
          class=""
        />
        <p>
          © 2023 Paymasters. All rights reserved. 
        </p>
        <ul>
          <li
            data-testid="footer-list-item"
          >
            <a
              href="#"
            >
              Discord
            </a>
             
          </li>
          <li
            data-testid="footer-list-item"
          >
            <a
              href="#"
            >
              Telegram 
            </a>
          </li>
          <li
            data-testid="footer-list-item"
          >
            <a
              href="#"
            >
              Twitter 
            </a>
          </li>
          <li
            data-testid="footer-list-item"
          >
            <a
              href="#"
            >
              Github
            </a>
             
          </li>
          <li
            data-testid="footer-list-item"
          >
            <a
              href="#"
            >
              Contact
            </a>
             
          </li>
          <li
            data-testid="footer-list-item"
          >
            <a
              href="#"
            >
              Privacy
            </a>
             
          </li>
        </ul>
      </footer>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
